--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "metacritic-app",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "expo-constants": "~16.0.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-svg": "15.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.1.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
-  },
-  "private": true
+	"name": "metacritic-app",
+	"version": "1.0.0",
+	"main": "expo-router/entry",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"lint": "eslint ."
+	},
+	"dependencies": {
+		"@expo/vector-icons": "^14.0.2",
+		"expo": "~51.0.28",
+		"expo-constants": "~16.0.2",
+		"expo-linking": "~6.3.1",
+		"expo-router": "~3.5.23",
+		"expo-status-bar": "~1.12.1",
+		"nativewind": "^2.0.11",
+		"react": "18.2.0",
+		"react-native": "0.74.5",
+		"react-native-safe-area-context": "4.10.5",
+		"react-native-screens": "3.31.1",
+		"react-native-svg": "15.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"eslint": "^8.57.0",
+		"eslint-config-expo": "^7.1.2",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"prettier": "^3.3.3",
+		"tailwindcss": "3.3.2"
+	},
+	"private": true
 }
